Enable preview i think

--- a/templates/mail.html
+++ b/templates/mail.html
@@ -3,5 +3,5 @@
 <p>Your signature is:</p>
 <code>{{signature}}</code>
 <p>This badge should be baked:</p>
-<img src="cid:BADGE">
+<img src="{{imgSrc}}">
 <p>Try saving it, then uploading it to the Backpack.</p>
