--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,7 +1,12 @@
-<h1>Hello!</h1>
-<p>This is a test.</p>
-<p>Your signature is:</p>
-<code>{{signature}}</code>
-<p>This badge should be baked:</p>
+<div style="text-align: center;">
 <img src="{{imgSrc}}">
-<p>Try saving it, then uploading it to the Backpack.</p>
+<p>Woo hoo! Someone sent you the {{badge.data.name}} badge.</p>
+<p style="font-size:0.8em; font-style:italic;">
+The badge you see above has been baked! You can save the image and upload
+it directly to your Backpack to see more information about the data inside.
+</p>
+<p style="font-size:0.6em;">
+This little badge was made with lots of love using BadgeCub.
+Make your own over <a href="{{serviceUrl}}">here</a>.
+</p>
+</div>
