--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,54 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Badglet</title>
-  <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.1.1/css/normalize.min.css" type="text/css" rel="stylesheet">
-  <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.1.1/css/foundation.min.css" type="text/css" rel="stylesheet">
-</head>
-<body>
+{% extends "layout.html" %}
+{% block body %}
   <form action="/" method="post" enctype="multipart/form-data">
     <div class="row">
-      <div class="small-2 columns">
+      <div class="small-12 text-center columns">
+        <h1>Make a badge for someone you love.</h1>
+      </div>
+      <div class="small-4 medium-2 large-offset-1 columns">
         <label for="change-img" class="right inline">Image:</label>
       </div>
-      <div class="small-10 columns">
+      <div class="small-8 medium-10 large-8 end columns">
         <input type="file" accept="image/png" name="badgeImg" id="badgeImg"/>
       </div>
     </div>
     <div class="row">
-      <div class="small-2 columns">
-        <label for="name" class="inline right">Name:</label>
+      <div class="small-4 medium-2 large-offset-1 columns">
+        <label for="name" class="inline right">Title:</label>
       </div>
-      <div class="small-10 columns">
-        <input type="text" name="name" placeholder="Name your badge">
+      <div class="small-8 medium-10 large-8 end columns">
+        <input type="text" name="name" placeholder="Make it fun, add a pun.">
       </div>
     </div>
     <div class="row">
-      <div class="small-2 columns">
+      <div class="small-4 medium-2 large-offset-1 columns">
         <label for="desc" class="inline right">Description:</label>
       </div>
-      <div class="small-10 columns">
-        <input type="text" name="desc" placeholder="Give it a short description">
+      <div class="small-8 medium-10 large-8 end columns">
+        <input type="text" name="desc" placeholder="Keep it short and sweet. Fit it in a tweet.">
       </div>
     </div>
     <div class="row">
-      <div class="small-2 columns">
-        <label for="recipient" class="inline right">Recipient email:</label>
+      <div class="small-4 medium-2 large-offset-1 columns">
+        <label for="recipient" class="inline right">Recipient's email:</label>
       </div>
-      <div class="small-10 columns">
-        <input type="text" name="recipient" placeholder="Their email address">
+      <div class="small-8 medium-10 large-8 end columns">
+        <input type="text" name="recipient" placeholder="Double check it, don't regret it.">
       </div>
     </div>
     <div class="row">
-      <div class="small-2 columns">
+      <div class="small-4 medium-2 large-offset-1 columns">
         <label for="msg" class="inline right">Message:</label>
       </div>
-      <div class="small-10 columns">
-        <input type="text" name="msg" placeholder="Give them some love">
+      <div class="small-8 medium-10 large-8 end columns">
+        <textarea name="msg" placeholder="Tell your badger why they deserve this masterpiece of a badge. If you have a link that proves it, add that in the mix too."></textarea>
       </div>
     </div>
     <div class="row">
-      <div class="small-10 small-offset-2 columns">
+      <div class="small-12 text-center columns">
         <button class="secondary" name="action" value="preview">Preview</button>
         <button type="submit" name="action" value="issue">Give</button>
       </div>
     </div>
   </form>
-  <script type="text/javascript" src="//code.jquery.com/jquery-2.1.0.min.js"></script>
-</body>
-</html>
+{% endblock %}
