--- a/templates/sent.html
+++ b/templates/sent.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Badglet</title>
-  <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.1.1/css/normalize.min.css" type="text/css" rel="stylesheet">
-  <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.1.1/css/foundation.min.css" type="text/css" rel="stylesheet">
-</head>
-<body>
+{% extends "layout.html" %}
+{% block body %}
   <div class="row">
-    <div class="small-12 columns">
+    <div class="small-12 text-center columns">
       <img src="{{dataUrl}}" alt="Your badge"/>
-      <p>High five! Your badge was sent to {{recipient}}.</p>
+      <h1>High five! Your badge was sent to {{recipient}}.</h1>
       <a href="/" class="button">Make another</a>
     </div>
   </div>
-</body>
-</html>
+{% endblock %}
