Include message in email

--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,6 +1,7 @@
 <div style="text-align: center;">
 <img src="{{imgSrc}}">
 <p>Woo hoo! Someone sent you the {{badge.data.name}} badge.</p>
+<pre style="border-radius: 1em; border: 1px solid #EEE; padding: 1em; margin-bottom: 1em;">{{message}}</pre>
 <p style="font-size:0.8em; font-style:italic;">
 The badge you see above has been baked! You can save the image and upload
 it directly to your Backpack to see more information about the data inside.
