Show a full error page; fix emailer to reject on invalid/rejected

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,8 +16,10 @@
     {% block body %}
     {% endblock %}
     <footer>
-      <img src="/static/mini_logo.png" alt="BadgeCub logo small">
-      <small>An Open Badges project</small>
+      <a href="/">
+        <img src="/static/mini_logo.png" alt="BadgeCub logo small">
+        <small>An Open Badges project</small>
+      </a>
     </footer>
   </div>
 </body>
