--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,7 @@
   {% block head %}
   <meta charset="utf-8">
   <title>BadgeCub</title>
-  <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.1.1/css/normalize.min.css" type="text/css" rel="stylesheet">
-  <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.1.1/css/foundation.min.css" type="text/css" rel="stylesheet">
-  <link href="/static/badgecub.css" type="text/css" rel="stylesheet">
+  <link href="/static/css/badgecub.css" type="text/css" rel="stylesheet">
   {% block headend %}
   {% endblock %}
   {% endblock %}
@@ -18,7 +16,7 @@
     <footer>
       <a href="/">
         <img src="/static/mini_logo.png" alt="BadgeCub logo small">
-        <small>An Open Badges project</small>
+        <small>An <strong>Open Badges</strong> project</small>
       </a>
     </footer>
   </div>
