--- a/templates/error.html
+++ b/templates/error.html
@@ -6,6 +6,7 @@
       <h1>We've encountered an error:</h1>
       <pre class="panel callout">{{error}}</pre>
       <a href="{{issueUrl}}" target="_blank" class="button">Report this error</a>
+      <a href="/make" class="button secondary">Try another</a>
     </div>
   </div>
 {% endblock %}
