--- a/templates/preview.html
+++ b/templates/preview.html
@@ -14,13 +14,13 @@
   </div>
   <div class="row">
     <div class="small-12 text-center columns">
-      <form action="/" method="post" enctype="multipart/form-data">
+      <form action="/make" method="post" enctype="multipart/form-data">
         {% for el in passthrough %}
           {% if el.hidden %}{% set el = el.hidden %}{% endif %}
           <input type="hidden" name="{{el.name}}" value="{{el.value}}"/>
         {% endfor %}
         <button type="submit" name="action" value="issue">Give</button>
-        <a href="/" class="button secondary">Cancel</a>
+        <a href="/make" class="button secondary">Cancel</a>
       </form>
     </div>
   </div>
