--- a/templates/sent.html
+++ b/templates/sent.html
@@ -4,7 +4,7 @@
     <div class="small-12 text-center columns">
       <img src="{{dataUrl}}" alt="Your badge"/>
       <h1>High five! Your badge was sent to {{recipient}}.</h1>
-      <a href="/" class="button">Make another</a>
+      <a href="/make" class="button">Make another</a>
     </div>
   </div>
 {% endblock %}
