--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,13 +1,19 @@
-<div style="text-align: center;">
-<img src="{{imgSrc}}">
-<p>Woo hoo! Someone sent you the {{badge.data.name}} badge.</p>
-<pre style="border-radius: 1em; border: 1px solid #EEE; padding: 1em; margin-bottom: 1em;">{{message}}</pre>
-<p style="font-size:0.8em; font-style:italic;">
-The badge you see above has been baked! You can save the image and upload
-it directly to your Backpack to see more information about the data inside.
-</p>
-<p style="font-size:0.6em;">
-This little badge was made with lots of love using BadgeCub.
-Make your own over <a href="{{serviceUrl}}">here</a>.
-</p>
+<div style="background-color: #AAE5C0; padding: 1.5em;">
+  <div style="text-align: center; background-color: white; padding: 1em; border-radius: 2em; box-shadow: #7AD69C 0 0.5em; max-width: 550px; margin: 0 auto;">
+    <img src="{{imgSrc}}">
+    <p>Woo hoo! Someone sent you the {{badge.data.name}} badge.</p>
+    <pre style="border-radius: 1em; border: 1px solid #EEE; padding: 1em; margin-bottom: 1em;">{{message}}</pre>
+    <p style="font-size:0.8em; font-style:italic;">
+      The badge you see above has been baked! You can save the image and upload
+      it directly to your Backpack to see more information about the data inside.
+    </p>
+    <p style="font-size:0.6em;">
+      This little badge was made with lots of love using BadgeCub.
+      Make your own over <a href="{{serviceUrl}}">here</a>.
+    </p>
+    <a href="{{serviceUrl}}" style="text-decoration: none;">
+      <img src="{{static('/mini_logo.png')}}" alt="BadgeCub logo small">
+      <small style="display: block; color: #7AD69C; font-size: 0.7rem;">An <strong>Open Badges</strong> project</small>
+    </a>
+  </div>
 </div>
