Add maker links, open badges link

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,8 @@
         <a href="/make" class="button">Get Started</a>
       </nav>
       <footer>
-        <small>An <strong>Open Badges</strong> project</small>
+        <small>An <a href="http://openbadges.org">Open Badges</a> project<br/>
+        made by <a href="https://twitter.com/stenington">@stenington</a> and <a href="https://twitter.com/varelidi">@varelidi</a></small>
       </footer>
     </div>
   </div>
