--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,8 +19,8 @@
       <footer>
         <a href="/">
           <img src="{{static('/mini_logo.png')}}" alt="BadgeCub logo small">
-          <small>An <strong>Open Badges</strong> project</small>
         </a>
+        <small>An <a href="http://openbadges.org">Open Badges</a> project</small>
       </footer>
     </div>
     {% endblock %}
