--- a/styles/badgecub.scss
+++ b/styles/badgecub.scss
@@ -68,13 +68,28 @@ footer {
   padding-bottom: 2em;
 }
 footer small {
-  font-size: 0.7rem;
+  font-size: 0.9rem;
+  line-height: 1.1rem;
   font-family: "Open Sans Light", "Helvetica Neue Light", sans-serif;
   display: block;
   color: #7AD69C;
 
   strong {
     font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  }
+
+  a,
+  a:link,
+  a:visited,
+  a:hover,
+  a:active {
+    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+    font-weight: bold;
+    color: #7AD69C;
+  }
+
+  a:hover {
+    text-decoration: underline;
   }
 }
 .panel {
