Closes #22 and #29: adding sender name and limiting badge image width

--- a/templates/mail.html
+++ b/templates/mail.html
@@ -1,7 +1,7 @@
 <div style="background-color: #AAE5C0; padding: 1.5em;">
   <div style="text-align: center; background-color: white; padding: 1em; border-radius: 2em; box-shadow: #7AD69C 0 0.5em; max-width: 550px; margin: 0 auto;">
-    <img src="{{imgSrc}}">
-    <p>Woo hoo! Someone sent you the {{badge.data.name}} badge.</p>
+    <img style="max-width: 100%;" src="{{imgSrc}}">
+    <p>Woo hoo! {{sender}} sent you the {{badge.data.name}} badge.</p>
     <pre style="border-radius: 1em; border: 1px solid #EEE; padding: 1em; margin-bottom: 1em;">{{message}}</pre>
     <p style="font-size:0.8em; font-style:italic;">
       The badge you see above has been baked! You can save the image and upload
