Limit badge size on confirmation page too

--- a/templates/sent.html
+++ b/templates/sent.html
@@ -2,7 +2,7 @@
 {% block body %}
   <div class="row">
     <div class="small-12 text-center columns">
-      <img src="{{dataUrl}}" alt="Your badge"/>
+      <img class="badge" src="{{dataUrl}}" alt="Your badge"/>
       <h1>High five! Your badge was sent to {{recipient}}.</h1>
       <a href="/make" class="button">Make another</a>
     </div>
